# OVDS

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  bench.rs  crypto.rs  fe16_ref.rs  gpu.rs  main.rs  stats.rs  ui.rs
src/shaders/: bench_sha256.wgsl  ed25519_keygen.wgsl
